<resources>
    <string name="app_name">Revolution Robotics</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="force_update_title">Update needed</string>
    <string name="force_update_description">The application version you are using is no longer supported. Please update from the Play Store!</string>
    <string name="force_update_exit_button_title">Quit</string>
    <string name="force_update_update_button_title">Update</string>
    <string name="onboarding_year_of_birth_label">What\'s your year of birth?</string>
    <string name="onboarding_save">Set</string>
    <string name="onboarding_scan_qr_title">Please scan the robot QR code</string>
    <string name="onboarding_scan_qr_description">The QR code can be found on the bottom of the Robot brain</string>
    <string name="onboarding_skip">Skip</string>
    <string name="onboarding_have_you_built_robot">Have you already built Revvy, the basic robot?</string>
    <string name="onboarding_skip_onboarding">Skip onboarding</string>
    <string name="onboarding_ready">Ready</string>
    <string name="onboarding_congratulations_title">Congratulations</string>
    <string name="onboarding_congratulations_description">We have plenty of challenges that you can start now!</string>
    <string name="onboarding_congratulations_button_label">Start</string>
    <string name="menu_robots">robots</string>
    <string name="menu_coding">programs</string>
    <string name="menu_challenges">challenges</string>
    <string name="my_robots_title">Your robots</string>
    <string name="my_robots_build_new">build new</string>
    <string name="who_to_build_title">Choose your robot to build!</string>
    <string name="who_to_build_build_your_own">build your own</string>
    <string name="who_to_build_download">download</string>
    <string name="who_to_build_searching_title">Searching for robots in the area</string>
    <string name="who_to_build_cannot_delete_robot_title">Cannot delete robot!</string>
    <string name="who_to_build_cannot_delete_robot_description">You have an unfinished %1$s in your robots list, finish or delete it first!</string>
    <string name="download_robot_downloading_robot">Downloading robot</string>
    <string name="download_robot_please_wait">Please wait</string>
    <string name="download_robot_success">Robot downloaded</string>
    <string name="download_robot_error">Failed to download robot</string>
    <string name="permission_bluetooth_title">Bluetooth permissions</string>
    <string name="permission_bluetooth_description">We need your location permissions to search for bluetooth devices.
        We can explain here how is this exactly working
    </string>
    <string name="permission_bluetooth_agree">Agree and continue</string>
    <string name="disconnect_modal_disconnect">Disconnect</string>
    <string name="disconnect_modal_description">Would you like to disconnect from the robot?</string>
    <string name="connection_successful_message">Connection has been established</string>
    <string name="connection_failed_message">Connection failed</string>
    <string name="connection_failed_subtitle">What to do?</string>
    <string name="connection_failed_skip_button_title">Skip connection</string>
    <string name="connection_failed_tips_button_title">Tips</string>
    <string name="connection_failed_try_again_button_title">Try again</string>
    <string name="build_robot_turn_on_the_brain_instruction">To take control, switch the brain on</string>
    <string name="build_robot_turn_on_the_brain_tip">Once it is ready, tap start</string>
    <string name="build_robot_later">Later</string>
    <string name="build_robot_tips">Tips</string>
    <string name="build_robot_start">Start</string>
    <string name="untitled_robot_name">Untitled robot</string>
    <string name="build_robot_loading_title">Creating your robot</string>
    <string name="build_robot_loading_description">Please wait</string>
    <string name="my_robots_play_button">Play!</string>
    <string name="my_robots_under_construction_button">Continue building</string>
    <string name="my_robots_under_construction_button_custom">Continue editing</string>
    <string name="my_robots_under_construction">under construction</string>
    <string name="dialog_robot_info_edit">Let’s edit the configuration to play with this robot!</string>
    <string name="duplicated_robot_name_suffix">Copy</string>
    <string name="delete_robot_description">Are you sure you want to delete this robot?</string>
    <string name="delete_robot_confirm">Delete</string>
    <string name="cannot_delete_robot_title">Cannot delete robot</string>
    <string name="cannot_delete_robot_description">You must have at least one robot left</string>
    <string name="info_robot_delete">Delete</string>
    <string name="info_robot_duplicate">Duplicate</string>
    <string name="info_robot_edit">Edit</string>
    <string name="build_chapter_finish_dialog_title">Chapter finished</string>
    <string name="build_chapter_finish_dialog_description">Well done!</string>
    <string name="build_chapter_finish_dialog_button_home">Home</string>
    <string name="build_chapter_finish_dialog_button_next_chapter">Test later</string>
    <string name="build_chapter_finish_dialog_button_test">Test now</string>
    <string name="camera_dialog_title">Robot\'s profile picture</string>
    <string name="camera_dialog_delete_title">Delete</string>
    <string name="camera_dialog_new_photo_title">Take new photo</string>
    <string name="tips_dialog_title">Tips</string>
    <string name="tips_dialog_sub_title">Try to…</string>
    <string name="tips_dialog_button_reconfigure">Reconfigure</string>
    <string name="tips_dialog_button_skip_testing">Skip testing</string>
    <string name="tips_dialog_button_community">Community</string>
    <string name="tips_dialog_button_try_again">Try again</string>
    <string name="tips_dialog_placeholder_1">If you have any problems with your robot, please check the Community forum for help.</string>
    <string name="testing_negative_button_title">Not really</string>
    <string name="testing_positive_button_title">Works fine!</string>
    <string name="testing_title">Testing</string>
    <string name="testing_question">Looking good?</string>
    <string name="testing_drivetrain_test">Robot moves back and forth and reaches initial position.</string>
    <string name="testing_motor_test">The attached motor does a half rotation back and forth and reaches initial
        position.
    </string>
    <string name="testing_bumper_test">Move your hand in front of the robot and gently push it. If the sensor detects
        it, the LED lights of the robot will turn green, otherwise turn red.
    </string>
    <string name="testing_ultrasonic_test">Move your hand in front of the robot. If the sensor detects it, the LED
        lights of the robot will turn green, otherwise turn red.
    </string>
    <string name="build_robot_finished_title">All set!</string>
    <string name="build_robot_finished_description">Your robot is ready to drive!</string>
    <string name="build_robot_finished_button">Let\'s drive</string>
    <string name="configure_connection_tab_title">Configure</string>
    <string name="configure_controller_tab_title">Controller</string>
    <string name="configure_controller_tab_title_without_controller">Controller ⚠️</string>
    <string name="configure_play_button_text">Play</string>
    <string name="configure_background_programs">Background programs</string>
    <string name="configure_program_priorities">Program priorities</string>
    <string name="configure_change_controller_type">Change controller type</string>
    <string name="configure_delete">Delete</string>
    <string name="configure_duplicate">Duplicate</string>
    <string name="configure_rename">Rename</string>
    <string name="configure_change_image">Change image</string>
    <string name="configure_connections_missing_part_name" translatable="false">MS</string>
    <string name="configure_connections_button_M1" translatable="false">M1</string>
    <string name="configure_connections_button_M2" translatable="false">M2</string>
    <string name="configure_connections_button_M3" translatable="false">M3</string>
    <string name="configure_connections_button_M4" translatable="false">M4</string>
    <string name="configure_connections_button_M5" translatable="false">M5</string>
    <string name="configure_connections_button_M6" translatable="false">M6</string>
    <string name="configure_connections_button_S1" translatable="false">S1</string>
    <string name="configure_connections_button_S2" translatable="false">S2</string>
    <string name="configure_connections_button_S3" translatable="false">S3</string>
    <string name="configure_connections_button_S4" translatable="false">S4</string>
    <string name="controller_selected">Play</string>
    <string name="controller_choose_this">Choose this!</string>
    <string name="controller_create_new">create new</string>
    <string name="delete_controller_description">Are you sure you want to delete this controller?</string>
    <string name="delete_controller_confirm">Delete</string>
    <string name="delete_controller_cancel">Cancel</string>
    <string name="controller_info_dialog_button_text">Got it</string>
    <string name="configure_motor_name_inputfield_title">Name</string>
    <string name="configure_motor_empty_button_title">Empty</string>
    <string name="configure_motor_drivetrain_button_title">Drive</string>
    <string name="configure_motor_motor_button_title">Motor</string>
    <string name="configure_motor_left_button_title">Left</string>
    <string name="configure_motor_right_button_title">Right</string>
    <string name="configure_motor_counterclockwise_button_title">Counter clockwise</string>
    <string name="configure_motor_clockwise_button_title">Clockwise</string>
    <string name="configure_motor_done_button_title">Done</string>
    <string name="configure_sensor_bumper_button_title">Button</string>
    <string name="configure_sensor_ultrasound_button_title">Distance</string>
    <string name="configure_motor_test_button_title">Test</string>
    <string name="controller_selector_title">Choose your controller!</string>
    <string name="controller_type_gamer">gamer</string>
    <string name="controller_type_multitasker">multi-tasker</string>
    <string name="controller_type_driver">driver</string>
    <string name="controller_setup_screen_title">Assign programs to buttons!</string>
    <string name="controller_setup_empty">empty</string>
    <string name="most_recent_show_more">Show more</string>
    <string name="most_recent_empty">No additional compatible program to assign. Let\'s build one under Programs!
    </string>
    <string name="program_info_edit_program">Edit program</string>
    <string name="program_info_compatibility_issue">This program is not compatible with the current configuration.</string>
    <string name="program_info_compatibility_issue_positive_button">Got it</string>
    <string name="program_info_remove_button">Remove program</string>
    <string name="program_info_add_button">Add program</string>
    <string name="program_info_delete_program">Delete program</string>
    <string name="settings_reset_tutorial">Reset onboarding</string>
    <string name="settings_firmware_update">Firmware update</string>
    <string name="settings_about_applications">About application</string>
    <string name="firmware_update_failed_title">Update failed</string>
    <string name="firmware_update_failed_tips_title">Try to…</string>
    <string name="firmware_update_failed_tips">- If you have any problems with your robot, please check the Community forum for help.</string>
</resources>