<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/background_programs"
          android:icon="@drawable/ic_background_program"
          android:title="@string/configure_background_programs"/>
    <item android:id="@+id/priority"
          android:icon="@drawable/ic_priority"
          android:title="@string/configure_program_priorities"/>
    <item android:id="@+id/change_controller_type"
          android:icon="@drawable/ic_controller"
          android:title="@string/configure_change_controller_type"/>
    <item android:id="@+id/delete"
          android:icon="@drawable/ic_delete"
          android:title="@string/configure_delete"/>
    <item android:id="@+id/duplicate"
          android:icon="@drawable/ic_copy"
          android:title="@string/configure_duplicate"/>
    <item android:id="@+id/rename"
          android:icon="@drawable/ic_edit"
          android:title="@string/configure_rename"/>
    <item android:id="@+id/change_image"
          android:icon="@drawable/ic_camera"
          android:title="@string/configure_change_image"/>
</menu>