<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.revolution.robotics.mainmenu.MainMenuViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/btn_robots"
                android:layout_width="120dp"
                android:layout_height="180dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:onClick="@{() -> viewModel.onRobotsClicked()}"
                android:text="@string/menu_robots"/>

        <Button
                android:id="@+id/btn_coding"
                android:layout_width="120dp"
                android:layout_height="180dp"
                app:layout_constraintLeft_toRightOf="@id/btn_robots"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:onClick="@{() -> viewModel.onCodingClicked()}"
                android:text="@string/menu_coding"/>

        <Button
                android:id="@+id/btn_challenges"
                android:layout_width="120dp"
                android:layout_height="180dp"
                app:layout_constraintLeft_toRightOf="@id/btn_coding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:onClick="@{() -> viewModel.onChallengesClicked()}"
                android:text="@string/menu_challenges"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
