<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.revolution.robotics.features.controllers.typeSelector.TypeSelectorViewModel"/>
        <variable name="toolbarViewModel"
                  type="com.revolution.robotics.views.toolbar.ToolbarViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.revolution.robotics.views.toolbar.RoboticsToolbar
                android:id="@+id/toolbar"
                app:viewModel="@{toolbarViewModel}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_gamer"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/wrapper_multitasker"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:onClick="@{() -> viewModel.onGamerControllerSelected()}"
                android:layout_width="@dimen/controller_type_selector_wrapper_width"
                android:layout_height="@dimen/controller_type_selector_wrapper_height"
                android:background="@drawable/bg_controller_type_selector_item_selector">

            <TextView
                    android:id="@+id/title_gamer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:text="@string/controller_type_gamer"
                    android:gravity="center"
                    android:fontFamily="@font/jura_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    app:layout_constraintTop_toBottomOf="@id/title_gamer"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_width="@dimen/controller_type_selector_image_width"
                    android:layout_height="@dimen/controller_type_selector_image_height"
                    android:src="@drawable/controller_gamer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_multitasker"
                android:layout_marginStart="@dimen/dimen_40dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/wrapper_gamer"
                app:layout_constraintEnd_toStartOf="@id/wrapper_driver"
                android:onClick="@{() -> viewModel.onMultitaskerControllerSelected()}"
                android:layout_width="@dimen/controller_type_selector_wrapper_width"
                android:layout_height="@dimen/controller_type_selector_wrapper_height"
                android:background="@drawable/bg_controller_type_selector_item_selector">

            <TextView
                    android:id="@+id/title_multitasker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:text="@string/controller_type_multitasker"
                    android:gravity="center"
                    android:fontFamily="@font/jura_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    app:layout_constraintTop_toBottomOf="@id/title_multitasker"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_width="@dimen/controller_type_selector_image_width"
                    android:layout_height="@dimen/controller_type_selector_image_height"
                    android:src="@drawable/controller_multitasker"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/wrapper_driver"
                android:layout_marginStart="@dimen/dimen_40dp"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/wrapper_multitasker"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{() -> viewModel.onDriverControllerSelected()}"
                android:layout_width="@dimen/controller_type_selector_wrapper_width"
                android:layout_height="@dimen/controller_type_selector_wrapper_height"
                android:background="@drawable/bg_controller_type_selector_item_selector">

            <TextView
                    android:id="@+id/title_driver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:text="@string/controller_type_driver"
                    android:gravity="center"
                    android:fontFamily="@font/jura_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                    app:layout_constraintTop_toBottomOf="@id/title_driver"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_width="@dimen/controller_type_selector_image_width"
                    android:layout_height="@dimen/controller_type_selector_image_height"
                    android:src="@drawable/controller_driver"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
